Whitespace and alignment fixes (#559)

--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -134,6 +134,7 @@ figcaption {
       margin-left: 0.25rem;
       .license {
         font-size: $font-size-small;
+        margin-top: -0.1rem;
       }
     }
   }  
