--- a/assets/scss/licenses.scss
+++ b/assets/scss/licenses.scss
@@ -66,6 +66,6 @@
     @extend .icon-font;
     display: inline-block;
     margin-right: 0.25rem;
-    margin-top: -0.1rem;
+    margin-top: -0.2rem;
   }
 }
